--- a/templates/list.html
+++ b/templates/list.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<h1>List</h1>
 {% endblock %}
 
 {% block body %}
+<h1>Full Catalog</h1>
 <p>{{ Movies_Shows }}</p>
 {% endblock %}
