--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,4 +5,11 @@
 
 {% block body %}
 <h1>Details</h1>
+<h2>{{ movie_show.title }}</h2>
+<ul>
+    <li>Genre: {{ movie_show.genre }}</li>
+    <li>Description: {{ movie_show.description }}</li>
+    <li>Release Date: {{ movie_show.release_date }}</li>
+    <li>Duration: {{ movie_show.duration }} minutes</li>
+</ul>
 {% endblock %}
