--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
 
 {% block body %}
     <h1>Homepage</h1>
-
+    <p>Welcome to Netflix! Login to see the full catalog of movies and shows!</p>
 {% endblock %}
 
