--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ body {
     background-color: rgba(58,53,49,255);
 }
 
-.link {
+.link, .genre-label {
     color: white;
     font-weight: bold;
     text-align: center;
@@ -18,7 +18,7 @@ body {
     transition: all 0.2s ease;
 }
 
-.link:hover {
+.link:hover, .genre-label:hover {
     background-color: beige;
 }
 
@@ -39,14 +39,42 @@ body {
 
 #menu {
     float: left;
-    width: 20%;
+    width: 25%;
     font-size: x-large;
     background-color: rgba(131,128,123,255);
     margin-top: 5px;
 }
 
+.genre-links {
+    display: none;
+}
+
+.genre-links a{
+    padding: 5px;
+    margin: 10px;
+    text-decoration-line: underline;
+}
+
+.genre-dropdown:hover .genre-links{
+    display: block;
+}
+
+
+.title_input {
+    display: inline-block;
+}
+
+.title_input {
+    max-width: 85%;
+}
+
 ul {
     list-style: none;
+}
+
+li {
+    margin-top: 10px;
+    
 }
 
 #content {
