--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,23 @@ body {
     background-color: rgba(58,53,49,255);
 }
 
+h1, h2 {
+    margin-top: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    margin-top: 10px;
+    
+}
+
 .link, .genre-label {
     color: white;
     font-weight: bold;
@@ -45,6 +62,15 @@ body {
     margin-top: 5px;
 }
 
+.history-link {
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    text-decoration-line: underline;
+    border-radius: 30px;
+    text-shadow: 1px 1px 2px black;
+}
+
 .genre-links {
     display: none;
 }
@@ -68,14 +94,7 @@ body {
     max-width: 85%;
 }
 
-ul {
-    list-style: none;
-}
 
-li {
-    margin-top: 10px;
-    
-}
 
 #content {
     float: left;
@@ -84,9 +103,7 @@ li {
     margin-left: 10px;
 }
 
-h1, h2 {
-    margin-top: 0;
-}
+
 
 .catalog_entry {
     float: left;
@@ -105,9 +122,6 @@ h1, h2 {
     background-color: gray;
 }
 
-a {
-    text-decoration: none;
-}
 
 
 @media screen and (max-width: 750px) {
