--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
         <ul>
             <li><a class="link" href="{{ url_for('pages.list') }}">Catalog</a></li>
             <li><a class="link" href="{{ url_for('pages.favorites') }}">Favorites</a></li>
+            <li><a class="link" href="{{ url_for('pages.history') }}">Watch History</a></li>
             <li>
                 <div class="genre-dropdown">
                     <label class="genre-label">Genres</label>
