--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,9 @@
 {% block body %}
 <h1>Login</h1>
 <br>
+{% if error %}
+    <p>{{ error }}</p>
+{% endif %}
 <form method="POST" action="login_input">
     <input type="text" name="username" placeholder="Username" min="1" maxlength="20" required/>
     <br>
@@ -17,5 +20,11 @@
     <br>
     <input type="submit" name="submit" value="submit"/>
 </form>
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 {% endblock %}
