--- a/templates/register.html
+++ b/templates/register.html
@@ -17,5 +17,11 @@
     <br>
     <input type="submit" name="submit" value="submit"/>
 </form>
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 {% endblock %}
