--- a/templates/login.html
+++ b/templates/login.html
@@ -14,9 +14,9 @@
     <p>{{ error }}</p>
 {% endif %}
 <form method="POST" action="login_input">
-    <input type="text" name="username" placeholder="Username" min="1" maxlength="20" required/>
+    <input type="text" name="username" placeholder="Username" minlength="1" maxlength="25" required/>
     <br>
-    <input type="password" name="password" placeholder="Password" min="1" maxlength="20" required/>
+    <input type="password" name="password" placeholder="Password" minlength="1" maxlength="25" required/>
     <br>
     <input type="submit" name="submit" value="submit"/>
 </form>
