implemented watch history; changed favorites button to checkbox that does not reload page

--- a/static/style.css
+++ b/static/style.css
@@ -82,3 +82,8 @@ ul {
 .no_menu {
     text-align: center;
 }
+
+.favorite_label, .favorite_check {
+    display: inline-flex;
+    margin-right: 10px;
+}
